<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 招新宣传语 -->
    <string name="xuanchuan">你还在迷茫自己的大学生活到底要怎么过吗？\n你还在纠结于想提升技术却又无人指点吗？\n你还在懊恼于自我价值和梦想没有展现的平台吗？\n\n那么，别犹豫，现在就加入到凌睿工作室这个大家庭中来吧！\n凌厉出鞘，睿意进取——凌睿既是技术交流的平台，也是结识伙伴的桥梁。\n在这里，大家“一起玩，一起学”，在一起玩的过程中一起学习知识，交流技术。\n在这里，你不仅能认识更多地小伙伴，还能获得更好的资源、更广的展示平台。\n\n我们的微信平台xinruanlingrui和招新群478218990会有更多招新细节哦\n我们期待着你的加入！！\nPS：只要你够认真、够热情、够上进，你就是我们期待的小伙伴！</string>

    <!-- 工作室介绍 -->
    <string name="introduction">\t\t凌睿工作室是电子科技大学优秀工作室，由傅翀老师，钱伟中老师及12级学生杨文元，11级学生暴鹏飞等一行人于2013年创建。\n\t\t凌睿工作室以创新和产品化作为自身发展的鲜明标志，并且十分看重工作室凝聚力和成员之间的团结融洽度。一年以来，秉承“凌厉出鞘，睿意进取”的宗旨，兼顾“安全”这一特色，凌睿研究新技术，参与新项目，并不断进步。\n\t\t目前，凌睿工作室已有内网监控、广告机系统等一系列成熟项目成果。其研究方向覆盖网络安全，系统编程，网页制作，Android开发等多个方向。其广告机系统已投入市场使用，内网监控系统也将不久应用于公司。\n\t\t在工作室所有成员的努力下，凌睿的项目能力和产学研结合能力一直处于创新工坊各大工作室的领先地位，其规模也不断扩大。工作室始终坚持“人品为先，兴趣指引，技术培养”，相信“ 一起玩，一起学”。\n\n工作室目前方向：\n\t\t安卓开发：Android手机软件开发，Java程序设计，J2EE架构与企业级应用开发\n\t\tWindows编程：c/c++/c#程序设计，MFC,WPF，windows驱动开发\n\t\tweb开发：web前端开发技术，网络安全相关技术，PS制图、设计等\n\n\t\t工作室技术方向是但不只是以上三个，欢迎所有新老成员组建新的技术方向、团队。</string>

    <!-- 指导老师 -->
    <string name="teacher1">\t\t凌睿工作室自成立以来能取得不断进步，离不开三位指导老师的支持和指导。不论是在学习上，项目上，还是生活上，三位指导老师都为我们提供了耐心的帮助和丰富的人生经验。亦师亦友，是对我们师生之间最好的写照。</string>
    <string name="fuchong">高情商的 “人生导师”-- 傅翀老师\n姓名：傅翀\n职务：讲师\n教育背景：\n\t\t1994-1998 电子科技大学就读本科\n\t\t1998-2001 电子科技大学就读硕士研究生，获硕士学位\n\t\t2005至2011年于电子科技大学就读博士研究生，获博士学位\n研究领域：隐私保护，网络安全\n研究概况：美国西北大学访问学者，先后参加国家242项目、中兴、华为等企业高校合作项目等的研究，发表论文10余篇。\n教学情况：从参加工作至今，先后讲授过本科生课程《高级程序设计语言》、《软件技术基础》、《数据结构》、《信息科技导论》、《数据库原理及应用》、《入侵检测技术》等，以及硕士生课程《电子商务技术》、《软件项目管理》、《信息安全概论》《网络安全协议》等。</string>
    <string name="qianweizhong">奋战在第一线的 “技术帝”--钱伟中老师\n姓名：钱伟中\n职务：副教授\n教育背景：\n\t\t1995-1999 电子科技大学计算机学院本科\n\t\t1999-2002 电子科技大学计算机学院硕士研究生\n\t\t2005 电子科技大学计算机学院博士研究生\n\t\t2007-2008宾夕法尼亚大学访问学者\n研究领域：数据挖掘\n研究概况：从事信产部《分布式防火墙》课题研究（2003-2005），中兴通讯基金项目《通用移动安全服务研究》（2005-2006）\n教学情况：计算机系统安全技术 （本科），网络信息安全技术（继续教育）</string>
    <string name="liqiaoqin">如沐春风的“心理关怀”--李巧勤老师\n姓名：李巧勤\n职务：副教授\n教育背景：\n\t\t1990-1994电子科技大学磁性物理与器件本科；\n\t\t1997-2000电子科技大学计算机学院就读硕士；\n\t\t2004至今，博士在读。\n教学情况：本科教学，《信息技术导论》、《高级语言程序设计》、《面向对象程序设计》等课程，参与《信息技术导论》精品课程建设。\n科研情况：参与总装《xxx》项目、《高可靠现场以太网研制》项目，作为主研参与《攀成钢人力资源管理系统》、《前锋800客户服务系统》等项目。\n获奖情况：《信息技术导论》省级精品课程。</string>

    <!-- 讲座 -->
    <string name="lecture1">讲座一：OWASP—成都站\n\t\tOWASP(开放Web软体安全项目- Open Web Application Security Project)是一个开放社群、非营利性组织，目前全球有130个分会近万名会员，其主要目标是研议协助解决Web软体安全之标准、工具与技术文件，长期致力于协助政府或企业了解并改善网页应用程式与网页服务的安全性。\n\t\t2014年10月25日，OWASP中国沙龙学术讲座由信软学院创新工坊凌睿工作室承办，在电子科技大学沙河校区2教201圆满举行。出席此次讲座的嘉宾有ISP互联网安全论坛联合创始人Water Wave（水波），Web应用安全厂商WebRay创始人CTO权小文，乌云核心白帽，PKAV团队成员gainover,OWASP成都区负责人王颉。本次讲座成功举办，OWASP文化在每位在场学生的心中激起涟漪，了解信息安全，体会高端技术的魅力。</string>
    <string name="lecture2">讲座二：诺顿\n\t\t诺顿的工程师主要为我们讲述了病毒方面的知识。诺顿工程师通过播放一段视频，用生动有趣的形式描述了电脑病毒的基本特点，病毒产生原理，传播途径与方式等，让我们更加了解pc安全知识。</string>
    <string name="lecture3">讲座三：360公司\n\t\t在360工作的工程师--田野，在钱老师的牵线下，带领着同组团队成员4人，为我们开展了一次网络安全讲座。几位工程师不仅为我们讲述了技术方面的知识，推荐了一些适合学习的材料与网站，例如“看雪”，“stackoverflow”,“SourerForge”等，分享了自己在工作中遇到的病毒和反病毒经验。同时，更为我们分析了现今的安全市场，以及要成为一名优秀工程师需要具备的素质和要求，为大学阶段的我们，带来了更为实际的意见和建议。\n\t\t整个讲座气氛热烈，尤其是大家和工程师之间的交流碰撞，为我们带来了新的视野。</string>
    <string name="lecture4">\t\t除了这些社会企业精英为我们带来一场场技术讲座，凌睿工作室内部也定期开展组内培训，交流学习心得。同时工作室成员李赵宁也曾作为学院创新创业部peer teaching 活动主讲人，为全年级的同学带来不一样的体验。</string>

    <!-- 特别放送 -->
    <string name="birthday1">成员心声：\n\t\t4月12日，正值春风送暖，艳阳高照之日，凌睿工作室全体成员齐聚一堂，共同庆祝工作室一周年。成员们早上9点从学校出发，在成都龙泉驿区度过了愉快的一周年庆典。\n\t\t回顾历史，凌睿工作室自创立以来就广泛涉及各领域，创立初期以网络安全为主要方向，之后向各个领域延伸。现在工作室将成员分为四个部门：网安组，windows编程组，安卓组以及网页与美工组，各部门以不同研究方向，力图将工作室发展为一个全面成长，各自有专攻的工作室。现在工作室成员每人至少接手了一个项目，参与项目多者达到五个项目。工作室成员彼此相处愉快，生活中也有不少交流，可以看到工作室为大家带来的成长，快乐。\n\t\t周庆现场场面活跃，无论是上午进行的三国杀游戏还是下午的羽毛球、乒乓球娱乐赛，各成员都参与其中，每人都充分享受着这次周年庆。在下午自助烧烤后的蛋糕大战使得周年庆氛围一度达到了高潮，相互涂抹上表示庆祝的奶油，我们工作室又迎来了新的一年。</string>
    <string name="birthday2">一次庆祝，一次凝聚，工作室的一年里，我们有过迷茫，有过错误，但还是一路走过来了，接下来的路还很长远，但是相信我们会用自己对工作室的热情走完接下来的全程。</string>

    <!-- 成员简介 -->
    <string name="member">\t\t2013年4月，为了寻找志同道合的朋友，更好地学习技术，杨文元和暴鹏飞在傅翀老师和钱伟中老师的指导下，于4月9日成立了睿凌工作室。之后，一批优秀人才先后进入工作室，凌睿初具规模。\n\t\t2013年10月，经过为期一月的考核，工作室迎来了第二批成员，这为工作室的发展壮大奠定了良好基础，凌睿开始走上越来越开阔的道路。\n\t\t2014年9月，工作室面向全院进行了招新活动。第三批成员的加入，为工作室注入新鲜血液。现在，工作室俨然已成为一个大家庭。</string>
    <string name="yangwenyuan">杨文元：2012级6010班学生\n工作室创始人，第一届第一负责人\n担任13级0501班导生，所带班级成绩\n排名全院第一，获优秀导生\n曾获得国家励志奖学金\n曾负责“绘画健心”活动，获得校级特等奖\n技术方向：Python开发、机器学习</string>
    <string name="baopengfei">暴鹏飞：2011级3020班学生\n工作室创始人，第一届第二负责人。\n曾在校学生会办公室负责组织策划\n2012-2013年度获“人民三等奖学金”；\n2011年获“成电心信软情”演讲比赛三等奖；\n参与并完成了联网广告播放系统、交通信息显示系统、内网监控系统\n2013年暑期在联通公司网络控制中心实习\n2014年（大三下学期）在长虹技术中心实习\n技术方向：Android开发</string>
    <string name="hukeqi">胡可奇：2011级3020班学生\n专业排名18\n获希捷企业奖学金一次\n人民二等奖学金一次\n多次参与过大型工程项目\n有较好的工程能力\n技术方向：C、操作系统、逆向工程</string>
    <string name="zhangming">张明：2011级2030班学生\nAndroid组组长\n两次获得国家励志奖学金\n长虹软件大赛一等奖\n技术方向：c#、android开发</string>
    <string name="wangpengfei">王鹏飞：2012级6010班学委\n工作室创始人之一\n入党积极分子\n代表学院参加成电杯新生辩论赛\n技术方向：自然语言处理</string>
    <string name="denghaoliang">邓浩梁：2012级3030班学生\n技术部部长\nwindows编程组组长\n曾获人民二等奖学金\n学院信息安全大赛三等奖\n项目经验丰富 内网监控系统\n反屏蔽代理服务器\n智能爬虫平台\n技术方向：安卓、Windows编程</string>
    <string name="zhangxin">张鑫：2011级3020班\n班级生活委员\n银杏果基金项目第一负责人\n优秀分团委学生会成员\n人民三等奖学金\n技术方向：Java、C#</string>
    <string name="zhanghao">张浩：2012级1030班学生\n工作室网页组组长\n学院新闻中心主任\n负责全院的新闻以及各大平台的宣传工作\n小提琴7级\n技术方向：网页制作</string>
    <string name="xuhua">徐华：2012级2030班学生\n网络安全组\n网页设计组组长\n工作室主要负责人之一\n技术方向：安卓，Java后端</string>
    <string name="wangbintao">王彬陶：2012级3020班学生\n工作室第一批成员\n曾获得人民二等奖学金\n技术方向：C#开发、Windows编程</string>
    <string name="zhanglu">张路：2011级2020班学生\n计算机、英语双学位\n中国共产党党员\n技术方向：人工智能、深度学习、神经认知科学</string>
    <string name="lihaoxing">李昊星：2012级3030班学生\n工作室骨干\n中共预备党员\n校青协百佳青年志愿者\n学院分团委优秀部员\n曾获得国家奖学金\n党校“中国梦”配乐朗诵比赛三等奖\n技术方向：嵌入式Linux下C程序和驱动开发</string>
    <string name="pengyicheng">彭一城：2012级7010班学生\n工作室第二届第二负责人\n入党积极分子\n曾任青志协办公室部长\n曾获“百佳青年志愿者”称号\n“成电杯”新生辩论赛最佳辩手</string>
    <string name="heyuwei">何雨薇：2013级0501班（网络安全）\n第二届第一负责人\n入党积极分子\n辅导员助理\n曾获“人民奖学金二等”\n长虹杯特等奖\n社会实践经验比较丰富\n技术方向：网页、美工</string>
    <string name="lianghaipeng">梁海鹏：2013级0101班学生\n网络安全与网页设计组成员\n工作室第二批成员\n技术方向：C、网页制作</string>
    <string name="lizhaoning">李赵宁：2013级0601班学生\nWindows编程组组长\n曾获人民二等奖学金\n技术方向：windows编程，网络编程</string>
    <string name="liuzhaoyi">刘钊祎：2013级0203班学生\n14级0201班导生\n专业排名第二、年级排名前3%\n曾获人民特等奖学金\n全国科技创新大赛一等奖\n四川省红十字青年代表\n技术方向：数据挖掘、机器学习</string>
    <string name="humiao">胡淼：2011级学生3020班学委\n曾获得国家励志奖学金\n足球狂热爱好者\n技术方向：\n安卓系统安全，数学建模，GIS开发</string>
    <string name="wangyu">王宇 ：2011级3030班学生\n人民奖学金二等\n国家励志奖学金\n东方通软件设计大赛三等奖\n前五学期成绩为专业10%\n参与了项目“口袋电科”APP、长虹新智能研究所“居家宜”APP\n技术方向：Android开发</string>
    <string name="caochan">曹灿:2011级3020班学生\n入党积极分子\n大一学年获人民三等奖学金\n大二学年获人民二等奖学金\n爱好：羽毛球、乒乓球\n技术方向：C++</string>
    <string name="huangyafei">黄亚菲：2013级0401班（大型主机）\n第三届第二负责人\n专业第二\n院青年志愿者协会队长\n院辩论队成员 获优秀辩手\n曾获东莞高新区企业奖学金\n曾获校优秀暑期社会实践个人\n曾获校百佳优秀志愿者\n技术方向：安卓</string>
    <string name="taowenyuan">陶文元：2013级0203班学生\n  大一下学期年级排名第八\n运动会跳高项目第二名\n曾参加电子科大数学建模比赛\n技术方向：c语言、java,windows\n</string>
    <string name="qiancan">钱璨：2013级0201班学生\n担任班级学习委员\n人民奖学金二等\n入党积极分子\n分团委学生会优秀部员\n信软学院第二届英语演讲比赛负责人\n暑期社会实践校级优秀个人\n“筑梦”支教队成员\n学院迎新优秀志愿者\n曾参与掌中宝贷款平台、生日提醒系统等项目\n技术方向：Android，Web</string>
    <string name="renyuanhang">任远航\n2013级0102班学生\n原网管会成员\n曾获国家励志奖学金\n技术方向：Android开发</string>
    <string name="huangtao">黄涛：2013级0203班学生\n凌睿工作室Android组组长\n曾获人民一等奖学金\n技术方向：Android开发</string>
    <string name="suheng">苏恒 2013级0101班学生\n现任工作室组织部部长\n擅长各种棋类、牌类游戏\n爱好历史文学，羽毛球，三国杀\n网页网安组成员\n技术方向：信息安全，web前端开发</string>
    <string name="jiazihui">贾子辉：2013级0601班学生\n凌睿工作室成员，现任网安组组长\n曾获人民奖学金三等\n技术方向：网页制作</string>
    <string name="xiaozhangjin">肖彰瑾： 2013级0601班学生\n担任班级班长\n工作室windows小组成员，宣传部部员\n曾作为队员获得新生篮球赛团体第一名\n凌睿工作室形象负责人\n技术方向：C++，接口设计</string>
    <string name="yangyang">杨洋：2013级0302班学生\n工作室美工组组长\n学院新闻宣传中心成员\n获2013-2014”优秀部员”\n获学院三人篮球赛第4名\n技术方向：美工设计、PS、网页</string>
    <string name="qiutong">邱童：2013级0402班学生\n工作室方向网络安全\n兴趣UNIX\n曾获2013-2014年度国家奖学金\n比较喜欢打牌，看剧\n技术方向：网络安全</string>
    <string name="zhaojin">赵菁：2013级0701班学生\n曾担任英语委员\n参加过“东方通”杯软件设计比赛\n技术方向：美工</string>
    <string name="weilai">魏来：2013级0801班学生\n担任班级英语委员\n曾获全院“致未来的你”英语演讲比赛第一名\n曾获人民奖学金\n技术方向：美工，UI设计</string>
    <string name="qiushilin">邱士林:2013级0101班学生\n现任宣传部部长\n网安组成员\n担任班级团支书\n预备党员\n院青志协成员\n曾获国家励志奖学金\n 技术方向：网络安全</string>
    <string name="wangpin">汪聘：电子科大信软学院研二学生\n喜爱篮球，乒乓球，羽毛球，看书\n平时对各种科学技术充满好奇\n喜欢广结朋友\n技术方向：Android开发</string>
    <string name="zhuqinqin">朱晴晴：2012级2020班学生\n担任学习部副部长\n班级英语委员\n12级党支部宣传委员\n曾获“成电心，信软情”演讲比赛二等奖\n曾获长虹杯软件设计大赛优胜奖\n校级优秀实践个人\n国家励志奖学金\n技术方向：Windows编程</string>

    <!-- 自动生成 -->
    <string name="app_name">凌睿招新2015</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_wallet">WalletActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_account_manage">AccountManageActivity</string>
    <string name="title_activity_bill">BillActivity</string>
    <string name="title_activity_timeable">TimeableActivity</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="title_activity_phone_search">PhoneSearchActivity</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_introduction">IntroductionActivity</string>
    <string name="title_activity_teacher">TeacherActivity</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_activity_lecture">LectureActivity</string>
    <string name="title_activity_report">ReportActivity</string>
    <string name="title_activity_tebiefangsong">TebiefangsongActivity</string>
    <string name="title_activity_member">MemberActivity</string>
    <string name="title_activity_member1">Member1Activity</string>
    <string name="title_activity_member2">Member2Activity</string>

</resources>