<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="${relativePackage}.${activityClass}" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/theme" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="指导老师"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <RelativeLayout
            android:id="@+id/rl_teacher_back"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/selector_drawable_theme_lighttheme" >

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_centerInParent="true"
                android:src="@drawable/ic_leftarrow_white" />
        </RelativeLayout>
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="5dp"
                android:text="@string/teacher1"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/fuchong" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/fuchong"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/qianweizhong" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/qianweizhong"
                android:textSize="15sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="280dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:src="@drawable/liqiaoqin" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:lineSpacingExtra="5dp"
                android:text="@string/liqiaoqin"
                android:textSize="15sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="10dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>